--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,9 +1,11 @@
 <div class="recipe recipe-list-item">
-    <div class="recipe-cover">
-        <a href="{% url 'recipes:recipe' recipe.id %}">
-            <img src="{{ recipe.cover.url}}" alt="Temporário">
-        </a>
-    </div>
+    {% if recipe.cover.url is not NULL %}
+        <div class="recipe-cover">
+            <a href="{% url 'recipes:recipe' recipe.id %}">
+                <img src="{{ recipe.cover.url}}" alt="Temporário">
+            </a>
+        </div>
+    {% endif %}
     <div class="recipe-title-container">
         <h2 class="recipe-title">
             <a href="{% url 'recipes:recipe' recipe.id %}">
@@ -51,7 +53,7 @@
         <div class="recipe-meta recipe-servings">
             <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
             <div class="recipe-meta-text">
-                {{ recipe.servings_time}} {{ recipe.servings_unit}}
+                {{ recipe.servings}} {{ recipe.servings_unit}}
             </div>
         </div>
     </div>
