--- a/recipes/templates/recipes/pages/search.html
+++ b/recipes/templates/recipes/pages/search.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'global/base.html' %}
+
+{% block title %}{{ page_title }} {% endblock title %}
+
+{% block content %}
+    <div class="main-content main-content-list container">
+        
+        {% for recipe in recipes %}
+            {% include 'recipes/partials/recipe.html' %}
+        {% empty %}
+            <h1 style="text-align:center;">Sem receitas encontrada</h1>
+        {% endfor %}
+    </div>
+{% endblock content %}
